# HexGame

./: CMakeLists.txt
include/: Board.h  GLOBAL.h  HexGame.h  HexRecord.h  MCTS.h  Utils.h
src/: Board.cpp  HexGame.cpp  MCTS.cpp  mainApp.cpp
test/: BoardTest.cpp
